--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
+
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start", 
+    "start-locale": "PORT=80 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,3 +34,5 @@
     ]
   }
 }
+
+
